--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,112 @@
 <resources>
     <string name="app_name">Цит</string>
+
+    <string name="roznichniy_otdel">
+        Цифровая техника, расходные материалы, канцтовары.\n
+        Тел.: +7 (47545) 5-31-17 (доб. 110)\n
+        Компьютерная техника, телевизоры.\n
+        Тел.: +7 (47545) 5-31-17 (доб. 117)\n
+        Бытовая техника.\n
+        Тел.: +7 (47545) 5-31-17 (доб. 120)\n
+        Спортивные товары и игрушки "Четыре Сезона".\n
+        Тел.: +7 (47545) 5-31-17 (доб. 102)\n
+        График работы\n
+        Понедельник – Воскресенье 9:00-18:00\n
+    </string>
+    <string name="korporotivniy_otdel">
+        Сергей Кондратов\n
+        ICQ: 483652090, E-mail: serg@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 103)\n
+        Пётр Платицин\n
+        ICQ: 574417695, E-mail: platithin@yandex.ru, тел.: (47545) 5-31-17 (доб. 121)\n
+        Александр Петров\n
+        ICQ: 446822500, E-mail: a.petrov@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 121)\n
+        Павел Скородумов\n
+        ICQ: 688739678, E-mail: skorodumov@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 121)\n
+        Ольга Карюкина\n
+        ICQ: 386583035, E-mail: ola@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 101)\n
+        График работы\n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота 9:00 – 15:00\n
+        Воскресенье – выходной\n
+    </string>
+    <string name="internet_magazin">
+        +7 (47545) 5-31-17 (доб. 121),order@cit-tmb.ru\n
+        График работы\n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота 9:00 – 15:00\n
+        Воскресенье – выходной\n
+    </string>
+    <string name="tenderniy_otdel">
+        Уважаемый покупатель! Если Вы государственный заказчик и хотите иметь постоянного и надежного поставщика компьютерной и офисной техники с качественной продукцией, широким ассортиментом и низкими ценами, обращайтесь в наш тендерный отдел по адресу serg@cit-tmb.ru. Телефоны +7 (47545) 5-31-17 (доб. 103). Наши специалисты будут рады принять участия в Ваших электронных торгах и предложить Вам наиболее выгодные условия. Мы внимательно относимся к пожеланиям и требованиям каждого заказчика и с любым клиентом работаем индивидуально.\n
+        График работы\n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота, Воскресенье – выходной\n
+    </string>
+
+    <string name="otdel_zakupok">
+        Александр Гусев\n
+        ICQ: 388964647, E-mail: alexandergusev@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 122)\n
+        Дмитрий Абакумов\n
+        ICQ: 674809987, E-mail: abakumov@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 122)\n
+        Виктор Ломакин\n
+        ICQ: 482303151, E-mail: viktor.lomakin@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 122)\n
+        График работы\n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота 9:00 – 15:00\n
+        Воскресенье – выходной\n
+    </string>
+
+    <string name="otdel_marketinga">
+        Будем рады выслушать предложения от производителей и дистрибьюторов о проведении совместных маркетинговых мероприятий; от представителей средств массовой информации; от компаний, оказывающих услуги в области полиграфии, рекламных агентств. Бурлакова Светлана, E-mail: marketolog@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 122) \n
+        График работы \n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота, Воскресенье – выходной \n\n
+    </string>
+
+    <string name="servis_centr">
+        +7 (47545) 5-31-17 (добавочные 115 и 111),kretinin.v@cit-tmb.ru\n
+        График работы\n
+        Понедельник - Воскресенье 9:00 – 18:00\n
+    </string>
+
+    <string name="otdel_avtomatizacii">
+        Павел Пиков\n
+        ICQ: 641260413, E-mail: p.pikov@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 118)\n
+        Геннадий Кретинин\n
+        ICQ: 637925535, E-mail: kgvik71@cit-tmb.ru, тел.: (47545) 5-31-17 (доб. 118)\n
+        Дмитрий Емельянов\n
+        ICQ: 652714138, E-mail: dmitrij_emelyanov@list.ru, тел.: (47545) 5-31-17 (доб. 118)\n
+        Александр Красинский\n
+        ICQ: 664729388, E-mail: sasha68mich@mail.ru, тел.: (47545) 5-31-17 (доб. 118)\n
+        График работы\n
+        Понедельник – Пятница 9:00 – 18:00\n
+        Суббота, Воскресенье – выходной\n
+    </string>
+    
+    <string name="adres">
+        Адреc:\n
+        393761, г. Мичуринск, ул. Красная, 97 «з»\n
+        Телефоны\n
+        (47545) 5-31-17 (многоканальный)\n
+        (47545) 5-55-18\n
+        (47545) 5-55-19\n
+        (47545) 5-55-20\n
+        График работы\n
+        Понедельник - Воскресенье 9:00 – 18:00
+    </string>
+
+
+    <string name="used_library">
+       Jsoup,Picasso,Recyclerview-fastscroll,ExpandableLayout
+    </string>
+
+    <string name="donat">
+        Поддержать проект:\n
+        Карта сб -  79027228625\n
+        Qiwi - 79027228625\n
+    </string>
+    
+    
+    
+    
 </resources>
